# open-agent-kit

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  API_ENDPOINTS.txt  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  QUICK_MODEL_SWITCH.md  README.md  SECURITY.md  alembic.ini  create_test_user.py  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt  setup.sh  setup_test_user.sql  test_versioning.py
.github/workflows/: ci.yml  docker-release.yml  release.yml
.gitlab/: deploy.yml  docker-package.yml
admin-ui/: Dockerfile  README.md  angular.json  package-lock.json  package.json
admin-ui/src/: index.html  styles.scss
alembic/: env.py
alembic/versions/: 7f4271a7a773_add_auth_tables.py  9a89de92579f_initial_schema_with_sessions_messages_.py  a3d9f10b7c42_add_integration_credentials.py  fc80e29dcd57_initial_open_agent_kit_schema.py
configs/: README.md  agents.json  api_providers.json  cache.json  prompt_templates.json  tools.json  triggers.json  vector_databases.json  workflows.json
configs/templates/: CONFIGURATION_HIERARCHY.md  INDEX.md  QUICK_REFERENCE.md  README.md
dashboards/: README.md  open-agent-kit.json  orchestration-service.json
docs/: AGENT_BEHAVIOR.md  CACHE_CONFIGURATION.md  EXECUTION_STRATEGIES.md  INDEX.md  MIGRATION_GUIDE.md  MODEL_CONFIGURATION.md  RAG_SETUP.md  README.md  TOPOLOGY_CONFIGURATION.md  TROUBLESHOOTING.md
examples/: README.md  rabbitmq_example.py  redis_cache_example.py
helm/: README.md
helm/open-agent-kit/: Chart.yaml  values-dev.yaml  values-prod.yaml  values.yaml
helm/orchestration-service/: Chart.yaml  values-dev.yaml  values-prod.yaml  values.yaml
k8s/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  networkpolicy.yaml  postgres-statefulset.yaml  rabbitmq-statefulset.yaml  redis-statefulset.yaml  secret.yaml  service.yaml
scripts/: create_library_tables.py  ingest_rag_documents.py  init-db.sql  init-mongodb.js  init_mongodb.py  migrate_configs_to_db.py  start_mongodb_docker.sh  start_qdrant_docker.sh  test_persistent_session.py  test_procurement_chatbot.py  test_requisition_api.py  verify_mongodb_sessions.py
src/: __init__.py  main.py
src/agents/: __init__.py  base.py  knowledge.py  orchestrator.py  reasoning.py  response.py
src/api/: __init__.py  app_factory.py  auth.py  builder_prompts.py  context.py  exception_handlers.py  keycloak_auth.py  lifespan.py  main.py  middleware.py  models.py  rate_limiting.py  response_validator.py  router_registry.py  session_manager.py  state_models.py  static_files.py  test_models.py  workflow_validation.py
src/audit_logging/: __init__.py  audit.py  logger.py
src/config/: __init__.py  agent_models.py  api_provider_models.py  behavior_models.py  behavior_validator.py  cache_models.py  config_loader.py  config_manager.py  dependency_validation.py  dynamic_models.py  execution_models.py  llm_provider.py  loader.py  migration.py  model_capabilities.py  openai_provider.py  prompt_models.py  registries.py  settings.py  tool_models.py  tool_registry.py  topology_models.py  validation.py  vector_db_models.py  versioned_service.py  watcher.py  workflow_models.py  workflow_registry.py
src/core/: events.py  response_extraction.py  streaming.py  workflow_test_runner.py
src/crewai_runtime/: __init__.py  execution_events.py  runtime.py
src/factory/: __init__.py  agent_factory.py
src/infrastructure/: __init__.py  async_processor.py  cache.py  cache_manager.py  embedding_cache.py  llm_cache.py  message_broker.py  secrets.py  session_cache.py
src/memory/: __init__.py  inmemory.py  models.py  store.py
src/models/: __init__.py  openai_llm.py
src/observability/: __init__.py  metrics.py  tracing.py
src/patterns/: __init__.py  context_passing.py  conversation_engine.py  error_handler.py  execution_engine.py  execution_strategies.py  topology_engine.py
src/tools/: __init__.py  api_tool_executor.py  calculator.py  context_utils.py  external_service.py  gmail_tool.py  rag_pipeline.py  web_search.py  (+5 more)
tests/: __init__.py  test_workflow_execution.py  test_workflow_integration.py
workflow-editor/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
(+241 files in other folders)
