[project]
name = "open-agent-kit"
version = "0.1.0"
description = "Open Agent Kit (OAK) - open-source multi-agent development kit with a visual studio, live LLM testing, and deployable chatbots"
authors = [
    {name = "Mubin Ul Islam", email = "uic.mubin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crewai[tools]>=1.14.4,<1.15",
    "pydantic>=2.11.9,<2.13",
    "pydantic-settings>=2.10.1,<2.11",
    "structlog>=25.5.0",
    "opentelemetry-sdk>=1.34.0,<1.35",
    "opentelemetry-api>=1.34.0,<1.35",
    "opentelemetry-instrumentation-fastapi>=0.55b0,<0.56",
    "opentelemetry-exporter-otlp-proto-grpc>=1.34.0,<1.35",
    "prometheus-client>=0.23.1",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.1",
    "asyncpg>=0.31.0",
    "redis>=7.4.0",
    "duckduckgo-search>=8.1.1",
    "watchdog>=6.0.0",
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.46.0",
    "aio-pika>=9.5.8",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "slowapi>=0.1.9",
    "cryptography>=46.0.3",
    "python-multipart>=0.0.20",
    "cachetools>=6.2.2",
    "jq>=1.10.0",
    "hypothesis>=6.148.2",
    "sqlalchemy>=2.0.49",
    "greenlet>=3.3.0",
    "psycopg2-binary>=2.9.11",
    "alembic>=1.18.5",
    "mcpadapt>=0.1.9",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.180.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "responses>=0.25.8",
    "ruff>=0.15.12",
    "mypy>=1.20.2",
    "pre-commit>=4.5.0",
]

[project.scripts]
oak = "src.main:main"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=html --cov-report=term-missing"
